--- a/project/package.json
+++ b/project/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "chart.js": "^4.5.0",
     "lucide-react": "^0.539.0",
     "next": "14.2.28",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "recharts": "^3.1.2"
   },
   "devDependencies": {
     "postcss": "^8",
